--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,8 @@
 
     <%= stylesheet_link_tag "application" %>
     <%= vite_client_tag %>
-    <%= vite_javascript_tag 'application' %>
+    <%= vite_typescript_tag 'application' %> <!-- IMPORTANT: TYPESCRIPT entry point with .ts file -->
+
     <!--
       If using a TypeScript entrypoint file:
         vite_typescript_tag 'application'
