--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
+  <%= vite_stylesheet_tag 'application', data: { "turbo-track": "reload" } %>
   <%= vite_client_tag %>
   <%= vite_typescript_tag 'application' %>
 </head>
