Ajout de l'horloge

--- a/app/views/pages/hello.html.erb
+++ b/app/views/pages/hello.html.erb
@@ -1,1 +1,18 @@
-<h1 class="text-lg text-red-500">Hello World</h1>
+<div class="flex flex-col items-center justify-center p-4 space-y-4">
+  <%= form_with url: pages_say_hello_path, method: :post do |form| %>
+    <%= form.submit "Show clock (with turbo)", class: "bg-blue-500 text-white px-4 py-2 rounded" %>
+  <% end %>
+  <%= form_with url: pages_say_hello_path, method: :post, data: { turbo: false } do |form| %>
+    <%= form.submit "Show clock (without turbo)", class: "bg-blue-500 text-white px-4 py-2 rounded" %>
+  <% end %>
+  <div class="text-center">
+    <%= vite_picture_tag 'images/clock.webp', class: "w-32 h-32 inline-block", image: { alt: "Horloge" } %>
+    <%= turbo_frame_tag "clock" do %>
+      <div class="flex space-x-2">
+        <div class="w-3 h-3 bg-blue-500 rounded-full animate-pulse"></div>
+        <div class="w-3 h-3 bg-blue-500 rounded-full animate-pulse [animation-delay:0.2s]"></div>
+        <div class="w-3 h-3 bg-blue-500 rounded-full animate-pulse [animation-delay:0.4s]"></div>
+      </div>
+    <% end %>
+  </div>
+</div>
