--- a/app/views/pages/_clock.html.erb
+++ b/app/views/pages/_clock.html.erb
@@ -1,3 +1,3 @@
-<p>
-  Current time: <%= Time.now.strftime("%H:%M:%S") %>
+<p data-controller="clock">
+  <%= Time.now.strftime("%H:%M:%S") %>
 </p>
