refacto du code d'exemple

--- a/app/views/clocks/create.erb
+++ b/app/views/clocks/create.erb
@@ -1,2 +1,2 @@
 <%= vite_picture_tag 'images/clock.webp', class: "w-32 h-32 inline-block", alt: "Horloge" %>
-<%= render "pages/clock" %>
+<%= render "shared/clock" %>
