--- a/app/views/shared/_clock.html.erb
+++ b/app/views/shared/_clock.html.erb
@@ -1,8 +1,3 @@
-<div class="bg-white rounded-xl shadow-lg p-8 text-center" data-controller="clock">
-  <h2 class="text-gray-500 text-sm uppercase tracking-wide mb-2">
-    Heure actuelle
-  </h2>
-  <div class="text-2xl font-medium text-gray-900">
-    <!-- Le contenu sera injecté ici par le controller Stimulus -->
-  </div>
-</div> 
+<p data-controller="clock">
+  <%= Time.now.strftime("%H:%M:%S") %>
+</p>
